Adding cloud option

--- a/src/main/resources/org/pentaho/di/couchbase/trans/connection/messages/messages_en_US.properties
+++ b/src/main/resources/org/pentaho/di/couchbase/trans/connection/messages/messages_en_US.properties
@@ -5,6 +5,7 @@ CouchbaseConnectionDialog.Port.Label = Port
 CouchbaseConnectionDialog.UserName.Label = Username
 CouchbaseConnectionDialog.Password.Label = Password
 CouchbaseConnectionDialog.Bucket.Label = Bucket Name
+CouchbaseConnectionDialog.IsCloud.Label = Cloud
 
 CouchbaseConnectionDialog.NoNameDialog.Title = Please provide a name
 CouchbaseConnectionDialog.NoNameDialog.Message = Please provide this Couchbase connection with a name
